[package]
name = "pump-sniper-grpc"
version = "0.1.0"
edition = "2024"
authors = ["Manice18"]
description = "A simple tool to snipe Pump.fun new pairs"
repository = "https://github.com/Manice18/pump-sniper-grpc"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
borsh = "1.5.7"
bs58 = "0.5.1"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
helius-laserstream = "0.1.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
solana-client = "3.0.8"
solana-commitment-config = "3.0.0"
solana-compute-budget = "3.0.8"
solana-sdk = "3.0.0"
solana-system-program = "3.0.8"
spl-associated-token-account = "8.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
